--- a/style.css
+++ b/style.css
@@ -1,7 +1,18 @@
+html {
+    background-color: black;
+    color: white;
+}
+
 body {
     font-size: 1.5rem;
+    margin-left: 1em;
+    margin-right: 1em;
 }
 
 h1 {
-    text-align: center;
+    background-color: #1d3030;
+    border-radius: 10px;
+    padding-left: .5em;
+    padding-top: .25em;
+    padding-bottom: .25em;
 }
